--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,31 +50,58 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Capacidad restante\nde la batería\n(microamperios-hora)"/>
+                android:text="ID"/>
 
             <TextView
                 android:id="@+id/tv05"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.00"/>
+                android:layout_span="2"
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv06"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="µAh"/>
+                android:layout_span="2"
+                android:text="0"/>
+
+        </TableRow>
+
+        <TableRow>
 
             <TextView
                 android:id="@+id/tv07"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.00"/>
+                android:text="Capacidad restante\nde la batería\n(microamperios-hora)"/>
 
             <TextView
                 android:id="@+id/tv08"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0"/>
+
+            <TextView
+                android:id="@+id/tv09"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="µAh"/>
+
+            <TextView
+                android:id="@+id/tv10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="00"/>
+
+            <TextView
+                android:id="@+id/tv11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -85,57 +112,32 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/tv09"
+                android:id="@+id/tv12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Corriente instantánea\nde la batería\n(microamperios)"/>
 
             <TextView
-                android:id="@+id/tv10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="0.00"/>
-
-            <TextView
-                android:id="@+id/tv11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="µA"/>
-
-            <TextView
-                android:id="@+id/tv12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="0.00"/>
-
-            <TextView
                 android:id="@+id/tv13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="µA"/>
-
-        </TableRow>
-
-        <TableRow>
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Corriente promedio\nde la batería\n(microamperios)"/>
+                android:text="µA"/>
 
             <TextView
                 android:id="@+id/tv15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.00"/>
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv16"
@@ -144,69 +146,69 @@
                 android:gravity="center"
                 android:text="µA"/>
 
+        </TableRow>
+
+        <TableRow>
+
             <TextView
                 android:id="@+id/tv17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.00"/>
+                android:text="Capacidad restante\nde la batería\n(porcentaje)"/>
 
             <TextView
                 android:id="@+id/tv18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="µA"/>
-
-        </TableRow>
-
-        <TableRow>
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Energía restante\n(nanovatios-hora)"/>
+                android:text="%"/>
 
             <TextView
                 android:id="@+id/tv20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.00"/>
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="nWh"/>
-
-            <TextView
-                android:id="@+id/tv22"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="0.00"/>
-
-            <TextView
-                android:id="@+id/tv23"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="nWh"/>
+                android:text="%"/>
 
         </TableRow>
 
         <TableRow>
 
             <TextView
+                android:id="@+id/tv22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Estatus\n(Battery Manager)"/>
+
+            <TextView
+                android:id="@+id/tv23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0"/>
+
+            <TextView
                 android:id="@+id/tv24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Capacidad restante\nde la batería\n(porcentaje)"/>
+                android:text=""/>
 
             <TextView
                 android:id="@+id/tv25"
@@ -220,93 +222,86 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="%"/>
+                android:text=""/>
+
+        </TableRow>
+
+        <TableRow>
 
             <TextView
                 android:id="@+id/tv27"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0"/>
+                android:text="TimeStamp"/>
 
             <TextView
                 android:id="@+id/tv28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="%"/>
-
-        </TableRow>
-
-        <TableRow>
+                android:layout_span="2"
+                android:text="--:--:--"/>
 
             <TextView
                 android:id="@+id/tv29"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Estatus\n(Battery Manager)"/>
-
-            <TextView
-                android:id="@+id/tv30"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="0"/>
-
-            <TextView
-                android:id="@+id/tv31"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""/>
-
-            <TextView
-                android:id="@+id/tv32"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="0"/>
-
-            <TextView
-                android:id="@+id/tv33"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""/>
+                android:layout_span="2"
+                android:text="--:--:--"/>
 
         </TableRow>
 
         <TableRow>
 
             <TextView
+                android:id="@+id/tv30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Corriente promedio\nde la batería\n(microamperios)"/>
+
+            <TextView
+                android:id="@+id/tv31"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_span="3"
+                android:text="0"/>
+
+            <TextView
+                android:id="@+id/tv32"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="µA"/>
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/tv33"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Energía restante\n(nanovatios-hora)"/>
+
+            <TextView
                 android:id="@+id/tv34"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Hora de Inicio"/>
+                android:layout_span="3"
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/tv35"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="--:--"/>
-
-            <TextView
-                android:id="@+id/tv36"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_span="2"
-                android:text="Hora de Termino"/>
-
-            <TextView
-                android:id="@+id/tv37"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="--:--"/>
+                android:text="nWh"/>
 
         </TableRow>
 
